using UnityEngine;

public class AnimationString
{
    internal static string attackTrigger = "attack";
    internal static string canMove = "canMove";
    internal static string isGrounded = "isGrounded";
    internal static string yVelocity = "yVelocity";
    internal static string jump = "jump";
}
